app/assets/stylesheets/styles.css
.body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  flex-grow: 1;
}

.container {
  width: 85%;
  max-width: 1000px;
  margin: 0 auto;
}

.primary-header {
  font-family: var(--font-header);
  padding: 2.5em;
  text-align: center;
  color: var(--color-primary-900);
}

.main-header {
  font-size: 2rem;
  font-weight: var(--font-weight-bold);
  line-height: 1;
}

.sub-header {
  font-size: 1rem;
  margin-top: 0.5em;
  font-weight: var(--font-weight-regular);
}

.footer {
  background-color: var(--color-primary-900);
  color: var(--color-text-100);
  text-align: center;
  margin-top: 2em;
  padding: 1em;
}

.footer p {
  font-size: 0.75rem;
  font-weight: var(--font-weight-bold);
  letter-spacing: 5px;
  opacity: 0.5;
}

.button {
  width: 100%;
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
  text-align: center;
  background-color: var(--color-primary-900);
  color: var(--color-text-100);
  padding: 0.5em;
  border: none;
  border-radius: 5px;
}

.search-form {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1em 0.5em;
}

.search-form .button {
  grid-column: span 3;
}

.select-date {
  display: flex;
  grid-column: span 3;
  gap: 0.5em;
}

select {
  width: min(300px, 100%);
  padding: 5px;
}

.form,
.airport-table,
.search-result,
.bookings,
.confirmation {
  width: 100%;
  max-width: 660px;
  margin: 0 auto;
}

.list-of-airport {
  text-align: center;
  padding: 2em 0;
}

.section-title {
  font-size: 1.5rem;
  font-weight: var(--font-weight-bold);
  padding: 0.5em 0;
}

.airport-table {
  table-layout: fixed;
  border-collapse: collapse;
  border: 2px solid var(--color-primary-900);
}

.airport-table thead th:first-child {
  width: 30%;
}

.airport-table tbody tr:nth-child(odd) {
  background-color: var(--color-primary-200);
}

.airport-table th {
  font-weight: var(--font-weight-bold);
  font-size: 1.25rem;
}

.airport-table th,
.airport-table td {
  padding: 0.5em 0;
  border: 2px solid var(--color-primary-900);
}

.search-result {
  padding: 2em 0;
}

input[type='radio'] {
  width: 16px;
  height: 16px;
}

.flight-details-card {
  display: flex;
  margin-bottom: 1em;
  align-items: center;
  accent-color: var(--color-primary-900);
  gap: 1em;
}

.flight-details {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  width: 100%;
  padding: 1em 1.5em;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  border-radius: 5px;
}

.departure-details .time,
.arrival-details .time {
  text-align: center;
  font-size: 0.75rem;
  font-weight: var(--font-weight-bold);
}

.departure-details .airport,
.arrival-details .airport {
  font-size: 1rem;
  font-weight: var(--font-weight-regular);
}

.trip-details {
  font-size: 0.75rem;
  font-weight: var(--font-weight-regular);
  color: var(--color-text-400);
}

hr {
  display: none;
}

.flight-id {
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 0;
  left: 0;
  padding: 1em 1.5em;
  background-color: var(--color-primary-900);
  color: var(--color-text-100);
  text-align: center;
  border-radius: 5px 5px 0 0;
  gap: 1em;
}

.ticket {
  padding-top: 4.5em;
  margin-bottom: 2.5em;
}

.field-title {
  font-size: 0.875rem;
}

.passenger-details {
  margin-bottom: 1.5em;
}

.field {
  display: flex;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: var(--font-weight-bold);
  margin: 1em 0;
}

.field input {
  height: 2.5em;
  padding: 0.5em;
  font-weight: var(--font-weight-regular);
}

.passenger-form {
  max-width: 330px;
  margin: 0 auto;
}

.confirmation-title {
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
}

.confirmation-subtitle {
  font-size: 0.6875rem;
  color: var(--color-text-400);
}

.booking {
  margin: 2em 0;
  padding-inline: 0;
}

.ticket-divider {
  width: 100%;
  border: 1px dashed var(--color-primary-200);
}

.ticket-passengers {
  width: 80%;
  max-width: 245px;
  text-align: center;
  padding-bottom: 1em;
}

.ticket-passenger-title {
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
  margin: 1em 0;
}

.passenger-info {
  display: grid;
  grid-template-columns: 30% 1fr;
}

.passenger-header {
  font-weight: var(--font-weight-bold);
}

.passenger {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ticket-flight {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  width: 100%;
  padding: 1em 1.5em;
}

@media only screen and (min-width: 600px) {
  .primary-header {
    padding: 4em;
  }

  .main-header {
    font-size: 4rem;
  }

  .sub-header {
    font-size: 1.5rem;
  }

  .search-result {
    padding: 3em 0;
  }

  .flight-details {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 2.5em 1.5em;
  }

  .departure-details .time,
  .arrival-details .time {
    font-size: 1rem;
    text-align: start;
  }

  .departure-details .airport,
  .arrival-details .airport {
    font-size: 1.125rem;
  }

  .trip-details {
    font-size: 1rem;
    text-align: center;
    width: 20%;
  }

  hr {
    display: block;
  }

  .ticket {
    padding-top: 5.5em;
    padding-inline: 2em;
  }

  .flight-id {
    padding-inline: 2em;
    text-align: start;
  }

  .field-title {
    font-size: 1rem;
  }

  .field {
    font-size: 1rem;
  }

  .confirmation-title {
    font-size: 1.5rem;
  }

  .confirmation-subtitle {
    font-size: 0.875rem;
  }

  .ticket-flight {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1em 0;
    padding-inline: 2em;
  }

  .confirmation .flight-details {
    flex-direction: column;
    padding-inline: 0;
    gap: 2em;
  }

  .ticket-passengers {
    max-width: 350px;
  }

  .ticket-passenger-title {
    font-size: 1.5rem;
  }

  .passenger-header {
    padding-bottom: 1em;
  }
}

